--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
+# dependencies
 node_modules/
+
+# build output
 dist/
+
+# env
 .env
+
+# sqlite db files
 *.db
+*.db-journal
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# test coverage
 coverage/
+
+# OS / editor
+.DS_Store
+.vscode/
