--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   "dependencies": {
     "@picocss/pico": "^1.5.7",
     "@prisma/client": "^5.8.0",
+    "@types/multer": "^2.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "multer": "^2.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
